--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -66,7 +66,7 @@
         android:layout_marginRight="42sp"
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
         android:layout_marginRight="42sp"
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
         android:layout_marginRight="42sp"
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -96,7 +96,7 @@
         android:layout_marginRight="42sp"
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
         android:layout_marginRight="42sp"
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -116,7 +116,7 @@
         android:layout_marginRight="42sp"
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -126,7 +126,7 @@
         android:layout_marginRight="42sp"
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -136,7 +136,7 @@
         android:layout_marginRight="42sp"
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -147,7 +147,7 @@
         android:background="@drawable/textviewstyle"
         android:layout_marginTop="10sp"
         android:visibility="gone"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     </LinearLayout>
     </ScrollView>
 </RelativeLayout>
