--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -141,7 +141,7 @@
         android:textAllCaps="false"
         android:drawableTop="@mipmap/book"
         android:layout_toRightOf="@+id/btnRefferal"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
     <Button
         android:layout_width="0sp"
         android:layout_weight="1"
@@ -153,7 +153,7 @@
         android:background="@android:color/transparent"
         android:layout_marginTop="10sp"
         android:layout_below="@+id/btnHow"
-        android:textColor="@color/finestBlack"/>
+        android:textColor="@color/colorBlack"/>
             <Button
                 android:layout_width="0sp"
                 android:layout_weight="1"
@@ -165,7 +165,7 @@
                 android:background="@android:color/transparent"
                 android:layout_marginTop="10sp"
                 android:layout_below="@+id/btnMore"
-                android:textColor="@color/finestBlack"/>
+                android:textColor="@color/colorBlack"/>
 
     </LinearLayout>
         <LinearLayout
@@ -187,7 +187,7 @@
             android:background="@android:color/transparent"
             android:layout_marginTop="10sp"
             android:layout_below="@+id/btnFreeDemo"
-            android:textColor="@color/finestBlack"/>
+            android:textColor="@color/colorBlack"/>
         </LinearLayout>
 
     </RelativeLayout>
